--- a/_timeline-steps/10_09_2021_action.md
+++ b/_timeline-steps/10_09_2021_action.md
@@ -3,5 +3,5 @@ title: Cycling For Future
 date: 2021-09-10 00:00:00
 ---
 
-On the 10th of September, Youth for climate Belgium, Fridays For Future Netherlands and Youth for Climate Luxembourg organized a cycling action near the European Parliament in Brussels to show that the climate is an international problem.
-At the same time in Germany, Ohne Kerosin nach Berlin was also doing cycling climate strike.
+On the 10th of September, Youth for Climate Belgium, Fridays For Future Netherlands and Youth for Climate Luxembourg organized a cycling action near the European Parliament in Brussels to show that the climate is an international problem.
+At the same time in Germany, Ohne Kerosin nach Berlin was also doing a cycling climate strike.
