--- a/_timeline-steps/24_09_2021_action.md
+++ b/_timeline-steps/24_09_2021_action.md
@@ -4,4 +4,4 @@ date: 2021-09-24 00:00:00
 picture: 24_09_2021_action.jpg
 ---
 
-On the 24th of September, Youth for Climate Luxembourg organized a climate strike, 3000 people joined the strike with many more in other cities and countries as this date was chosen by Fridays For Future International as a global strike day.
+On the 24th of September, Youth for Climate Luxembourg organized a climate strike. 3000 people joined the strike with many more in other cities and countries as this date was chosen by Fridays For Future International as a global strike day.
