--- a/_timeline-steps/30_01_2021_action.md
+++ b/_timeline-steps/30_01_2021_action.md
@@ -3,4 +3,4 @@ title: YfCL is at Autofestival
 date: 2021-01-30 00:00:00
 ---
 
-On the 30th of January, YfCL went to the Autofestival in Bonnevoie to warn car buyers about all the msinformation spread around the impact of cars on the climate.
+On the 30th of January, YfCL went to the Autofestival in Bonnevoie to warn car buyers about all the misinformation spreading about the impact of cars on the climate.
